RESOLVED FIXED257799
[GStreamer][GTK] Cannot play WWDC 2023 on apple.com
https://bugs.webkit.org/show_bug.cgi?id=257799
Summary [GStreamer][GTK] Cannot play WWDC 2023 on apple.com
Kdwk
Reported 2023-06-07 06:38:09 PDT
1. Visit https://www.apple.com/apple-events/ 2. Watch the keynote 3. "The video could not be played"
Attachments
Philippe Normand
Comment 1 2023-06-08 09:38:07 PDT
Native HLS without MSE fallback... Using a Chrome UA works around the issue...
Michael Catanzaro
Comment 2 2023-06-08 11:04:23 PDT
I think Phil does not want to support HLS. Want to try reporting this one via https://webcompat.com/?
Michael Catanzaro
Comment 3 2023-06-08 11:05:06 PDT
Um, to be clear: we removed the HLS support last year in favor of MSE.
Philippe Normand
Comment 4 2023-06-15 08:28:16 PDT
Michael Catanzaro
Comment 5 2023-06-15 09:11:51 PDT
Well maybe we should add a Chrome user agent quirk for apple.com until it gets fixed?
Michael Catanzaro
Comment 6 2023-06-15 09:12:03 PDT
.
Michael Catanzaro
Comment 7 2023-06-15 09:40:30 PDT
EWS
Comment 8 2023-06-15 11:54:16 PDT
Committed 265206@main (e0b0d3b7983f): <https://commits.webkit.org/265206@main> Reviewed commits have been landed. Closing PR #15008 and removing active labels.
Karl Dubost
Comment 9 2023-06-22 23:04:33 PDT
It's probably worth a bug report inside Apple too.
Michael Catanzaro
Comment 10 2023-06-23 06:04:36 PDT
(In reply to Karl Dubost from comment #9) > It's probably worth a bug report inside Apple too. Is that something you can help with?
Karl Dubost
Comment 11 2023-06-27 22:58:40 PDT
A bug has been reported to rdar://111434377
Note You need to log in before you can comment on or make changes to this bug.