[GStreamer][GTK] Cannot play WWDC 2023 on apple.com https://bugs.webkit.org/show_bug.cgi?id=257799

Reviewed by Philippe Normand.

Well we've reached the point where apple.com doesn't work correctly
without a Chrome user agent quirk, so... add the required quirk.

Of course it would be much nicer to fix this on the server side.

* Source/WebCore/platform/glib/UserAgentQuirks.cpp:
(WebCore::urlRequiresChromeBrowser):
* Tools/TestWebKitAPI/Tests/WebCore/UserAgentQuirks.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/265206@main