Tools/TestWebKitAPI/Tests/WebCore/UserAgentQuirks.cpp
@@ -88,6 +88,7 @@ TEST(UserAgentTest, Quirks)
     assertUserAgentForURLHasChromeBrowserQuirk("http://bankofamerica.com/");
     assertUserAgentForURLHasChromeBrowserQuirk("http://soundcloud.com/");
     assertUserAgentForURLHasChromeBrowserQuirk("http://youtube.com/");
+    assertUserAgentForURLHasChromeBrowserQuirk("http://apple.com/");
 
     assertUserAgentForURLHasFirefoxBrowserQuirk("http://bugzilla.redhat.com/");
 
